--- a/package.json
+++ b/package.json
@@ -51,10 +51,10 @@
     "html5-qrcode": "2.3.8"
   },
   "devDependencies": {
-    "@capacitor/android": "next",
-    "@capacitor/core": "next",
+    "@capacitor/android": "^6.1.2",
+    "@capacitor/core": "^6.1.2",
     "@capacitor/docgen": "^0.2.2",
-    "@capacitor/ios": "next",
+    "@capacitor/ios": "^6.1.2",
     "@ionic/swiftlint-config": "^1.1.2",
     "@types/node": "~20.12.4",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
@@ -69,7 +69,7 @@
     "typescript": "^5.4.2"
   },
   "peerDependencies": {
-    "@capacitor/core": "next"
+    "@capacitor/core": "^6.1.2"
   },
   "swiftlint": "@ionic/swiftlint-config",
   "capacitor": {
